# jobportal-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  manage.py  openapi.yaml  pyproject.toml  requirements.txt
.agent_context/: issue_context.md
.github/workflows/: ci.yml  deploy.yml  test.yml
accounts/: __init__.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_company_userprofile.py  __init__.py
applications/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0002_application_cover_letter_alter_application_status_and_more.py  __init__.py
core/: __init__.py  admin.py  apps.py  models.py
jobportal/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
jobportal/settings/: __init__.py  base.py  dev.py  prod.py
notifications/: __init__.py  apps.py  tasks.py
resumes/: __init__.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
resumes/migrations/: 0001_initial.py  0002_alter_resume_options_remove_resume_education_and_more.py  __init__.py
search/: __init__.py  apps.py  client.py  indexing.py  serializers.py  signals.py  urls.py  views.py
search/management/commands/: reindex_vacancies.py
tests/: __init__.py  conftest.py  factories.py  test_api_docs.py  test_applications_api.py  test_resumes.py  test_search.py  test_vacancies_api.py
tests/accounts/: test_models.py
tests/applications/: test_applications_api.py
tests/resumes/: test_resumes.py
tests/vacancies/: test_vacancies_api.py
vacancies/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_category_vacancy_city_and_more.py  __init__.py
