[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobportal"
version = "0.1.0"
description = "Job portal MVP backend."
requires-python = ">=3.12"
dependencies = [
    "dj-database-url==2.3.0",
    "django==5.2.13",
    "django-celery-beat==2.9.0",
    "djangorestframework==3.17.1",
    "drf-spectacular==0.28.0",
    "djangorestframework-simplejwt==5.5.1",
    "meilisearch==0.34.1",
    "celery==5.4.0",
    "redis==5.0.4",
    "psycopg[binary]",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-django==4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jobportal.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["accounts*", "applications*", "jobportal*", "notifications*", "resumes*", "search*", "vacancies*"]
